manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-backend-service
spec:
  selector:
    app: python-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
